force-app/main/default/objects/PublicApi_Submission__c/PublicApi_Submission__c.object-meta.xml
<CustomObject>
    <description>Generic guest-access public API submission record.</description>
    <label>Public API Submission</label>
    <nameField>
        <displayFormat>PAS-{00000000}</displayFormat>
        <label>Public API Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public API Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>