force-app/main/default/objects/PublicApi_Submission__c/fields/Created_By_PublicApi_API__c.field-meta.xml
<CustomField>
    <fullName>Created_By_PublicApi_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Public API</label>
    <type>Checkbox</type>
</CustomField>