force-app/main/default/objects/PublicApi_Submission__c/fields/Effective_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Effective_Config_JSON__c</fullName>
    <label>Effective Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>