force-app/main/default/objects/PublicApi_Submission__c/fields/Google_Ads_Conversion_Event__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Conversion_Event__c</fullName>
    <label>Google Ads Conversion Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>