force-app/main/default/objects/PublicApi_Submission__c/fields/Google_Ads_Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Google_Ads_Conversion_Time__c</fullName>
    <label>Google Ads Conversion Time</label>
    <type>DateTime</type>
</CustomField>