force-app/main/default/objects/PublicApi_Submission__c/fields/Processing_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error_Category__c</fullName>
    <label>Processing Error Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>