force-app/main/default/objects/PublicApi_Submission__c/fields/PublicApi_Integration_Config__c.field-meta.xml
<CustomField>
    <fullName>PublicApi_Integration_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public API Integration Config</label>
    <referenceTo>PublicApi_Integration_Config__c</referenceTo>
    <relationshipLabel>Public API Submissions</relationshipLabel>
    <relationshipName>PublicApi_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>