force-app/main/default/objects/PublicApi_Submission__c/fields/Related_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Status__c</fullName>
    <label>Related Record Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>