force-app/main/default/objects/PublicApi_Submission__c/fields/Request_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Content_Type__c</fullName>
    <label>Request Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>