force-app/main/default/objects/PublicApi_Submission__c/fields/Target_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Link__c</fullName>
    <formula>IF(
    ISBLANK(Target_Record_Id__c),
    null,
    HYPERLINK(
        &apos;/&apos; &amp; Target_Record_Id__c,
        Target_Record_Id__c,
        &apos;_self&apos;
    )
)</formula>
    <inlineHelpText>Opens the record created or updated by the public API request.</inlineHelpText>
    <label>Target Record Link</label>
    <type>Text</type>
</CustomField>