force-app/main/default/objects/PublicApi_Submission__c/listViews/All_Submissions.listView-meta.xml
<ListView>
    <fullName>All_Submissions</fullName>
    <columns>NAME</columns>
    <columns>PublicApi_Integration_Config__c</columns>
    <columns>Received_At__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Target_Record_Id__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Related_Record_Status__c</columns>
    <columns>Processing_Error_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Submissions</label>
</ListView>