force-app/main/default/objects/PublicApi_Submission__c/listViews/Created_By_Public_API.listView-meta.xml
<ListView>
    <fullName>Created_By_Public_API</fullName>
    <columns>NAME</columns>
    <columns>PublicApi_Integration_Config__c</columns>
    <columns>Received_At__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Target_Record_Id__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Related_Record_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_By_PublicApi_API__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Created By Public API</label>
</ListView>