force-app/main/default/objects/PublicApi_Submission__c/listViews/Failed_Processing.listView-meta.xml
<ListView>
    <fullName>Failed_Processing</fullName>
    <columns>NAME</columns>
    <columns>PublicApi_Integration_Config__c</columns>
    <columns>Received_At__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Target_Record_Id__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Related_Record_Status__c</columns>
    <columns>Processing_Error_Category__c</columns>
    <columns>Processing_Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Processing</label>
</ListView>